# crossmint-coding-challenge

./: README.md  mypy.ini  pyproject.toml
.github/workflows/: lint_and_test.yml
commands/: solve.py
crossmint/: client.py  entities.py  megaverse.py  urls.py
tests/: test_client.py  test_entities.py  test_megaverse.py
